<resources>
    <string name="app_name">pizza</string>
    <string name="pizzaPlanet">Pizza Planet</string>
    <string name="neapolitan">Neapolitan</string>
    <string name="chicago">Chicago</string>
    <string name="sicilian">Sicilian</string>
    <string name="pizzaButton">Order Pizza</string>
    <string name="toppings">Extra Toppings</string>
    <string name="meatToppings">Meat Toppings</string>
    <string name="sausage">Sausage</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="beef">Beef</string>
    <string name="bacon">Bacon</string>
    <string name="veggieToppings">Veggie Toppings</string>
    <string name="peppers">Peppers</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="onions">Onions</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="locationButton">Find Pizza</string>
    <string-array name="location">
        <item>Boss Lady</item>
        <item>Cosmos</item>
        <item>Blackjack</item>
    </string-array>
    <string name="title_activity_pizza">PizzaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="feedbackHint">Feedback</string>
</resources>